# Baking

./: .gitignore  .pylintrc  README.md  makefile  package-lock.json
.github/workflows/: deployment.yml  frontend copy.yml  frontend-flutter.yml  frontend-react.yml  frontend.yml  python-app.yml  web-server.yml
deployment/: deploy-ingress-controller.sh
deployment/scrips/: build.sh
flutter_client/: README.md  pubspec.yaml
flutter_client/lib/: homepage.dart  main.dart  main.dart.old  main.dart.old2  recipe_view.dart
flutter_client/test/: widget_test.dart
flutter_client/web/: index.html  manifest.json
next-client/: package-lock.json  package.json
nextjs-dashboard/app/: page.tsx
react-client/: .env.development  .env.production  .eslintrc  .eslintrc.js  package-lock.json  package.json
react-client/.storybook/: main.js  preview.js
react-client/public/: bundle.js  index.html  manifest.json
react-client/src/: App.css  App.js  App.jsx  configureStore.js  index.js
react-client/storybook-static/: 183.51d5598d.iframe.bundle.js  183.51d5598d.iframe.bundle.js.map  426.d552ef48.iframe.bundle.js  426.d552ef48.iframe.bundle.js.map  433.a6ad19fb.iframe.bundle.js  603.cdd01739.iframe.bundle.js  607.4aef3b41.iframe.bundle.js  623.6e3d683d.iframe.bundle.js  629.6624fd70.iframe.bundle.js  629.6624fd70.iframe.bundle.js.map  iframe.html  (+34 more)
server/: .config.azure.env  .config.local.env  .dockerignore  .gitignore  Dockerfile  docker-compose.yml  noxfile.py  pyproject.toml
server/.github/: python-app.yml
server/scripts/: prestart.sh
server/src/baking/: .config.azure.env  .config.local.env  __init__.py  alembic.ini  config.py  exceptions.py  logger.py  main.py  middlewares.py  models.py  router.py
server/src/baking/auth/: services.py
server/src/baking/database/: core.py  manage.py  services.py
server/src/baking/database/filters/: models.py
server/src/baking/database/revisions/: env.py
server/src/baking/database/revisions/versions/: 0f036ca3d3bf_changing_user.py  3058a27a234e_removing_test_field.py  42fe8445558b_adding_steps_tp_procedure.py  69eb477fcc92_starting_point.py  78449bafe6f0_starting_point.py  ec75c6e5cddc_adding_image_url_to_recipe.py  f12b70f3a596_adding_test_field.py  f583daf7dcb1_starting_point.py  f842c6ca6068_adding_search_vector.py
server/src/baking/routers/ingredients/: enums.py  models.py  service.py  views.py
server/src/baking/routers/procedure/: models.py  service.py  views.py
server/src/baking/routers/recipe/: models.py  service.py  views.py
server/src/baking/routers/steps/: models.py  service.py
server/src/baking/routers/users/: models.py
server/src/baking/search/fulltext/: __init__.py
server/src/baking/utils/: azure.py  azure_storage.py  general.py
server/tests/: __init__.py  conftest.py  factories.py  mongo_db.py  test_api.py
server/tests/test_routers/: test_api.py  test_ingredient.py  test_procedure.py  test_recipes.py  test_recipes_logic.py  test_step.py
web-server/: Dockerfile  app.js  docker-compose.yml  package-lock.json
(+109 files in other folders)
