[tool.poetry]
name = "baking"
version = "1.0.1"
description = ""
authors = ["Moshe Reubinoff <reubinoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"

colorlog = "^6.4.1"
pydantic =  {extras = ["dotenv"], version = "2.2.1"}
uvicorn = "^0.23.2"
azure-storage-blob = "^12.13.1"
cryptography = "^41.0.3"
fastapi = "0.101.1"
python-multipart = "^0.0.6"
pydantic-settings = "^2.0.2"
motor = "^3.2.0"


[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^23.1.0"
autopep8 = "^2.0.2"
requests = "^2.26.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
flake8 = "^6.0.0"
anyio = "^3.7.1"
mypy = "^1.4.1"
pytest-asyncio = "^0.21.1"
polyfactory = "^2.7.2"
httpx = "^0.24.1"
mock = "^5.1.0"


[tool.poetry.group.dev.dependencies]
anyio = "^3.7.1"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.4.*"]
build-backend = "poetry.core.masonry.api"
